fixed overflow of elements

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 div#app{
-  min-height: 150vh;
+  min-height: 200vh;
   min-width: 95vw;
   background-image: url("./assets/space.jpg");
   background-position: center;
@@ -225,10 +225,10 @@ div.cyberpunk3{
 div#projects{
   display: grid;
   grid-template-columns: repeat(2, 40%);
-  grid-template-rows: repeat(3, 33%);
+  grid-template-rows: repeat(3, 30%);
   grid-area: projects;
   justify-content:space-around;
-  row-gap: 15px;
+  row-gap: 3px;
 }
 
 canvas.objects{
