--- a/src/Project.css
+++ b/src/Project.css
@@ -15,14 +15,18 @@ div.project1{
                          "stack"
                          "description"
                          "preview";
-    min-height: 100%;
+    min-height: 90%;
     min-width: 100%;
     align-items: center;
-    animation: glitchproject1 1s linear infinite;
+    animation-name: glitchproject1;
+    animation-duration: 0.5s;
+    animation-delay: 5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
     grid-column: 1;
     grid-row: 1;
-    border: solid 2px #1afe39;
-    box-shadow: 0 0 1rem #1afe39;
+    border: solid 2px white;
+    box-shadow: 0 0 1rem white;
     background-color: rgb(42, 4, 78);
 }
 
@@ -36,65 +40,207 @@ div.project2{
                          "stack"
                          "description"
                          "preview";
-    min-height: 100%;
+    min-height: 90%;
     min-width: 100%;
     align-items: center;
-    animation: glitchproject2 1.5s linear infinite;
+    animation-name: glitchproject2;
+    animation-duration: 0.5s;
+    animation-delay: 5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
     grid-row: 1;
     grid-column: 1;
     border: solid 2px rgba(241, 5, 135, 0.911);
     box-shadow: 0 0 1rem rgba(241, 5, 135, 0.911);
-    background-color: rgba(241, 5, 135, 0.911);
+    background-color: rgb(42, 4, 78);
 }
 
-@keyframes glitchproject1 {
-    0%{
-        transform: translate(-1px 4px);
-        opacity: 0.50;
-    }
-    25%{
-        transform: translate(3px, -1px);
-        opacity: 1;
-    }
-    50%{
-        transform: (0px, 5px);
-        opacity: 0.50;
-    }
-    75%{
-        transform: translate(-3px, 1px);
-        opacity: 1;
-    }
-    100%{
-        transform: translate(-5px, 1px);
-        opacity: 0.50;
-    }
+div.project3{
+  display: grid;
+  grid-template-rows: 10% 10% 10% 10% 30% 30%;
+  grid-template-columns: 100%;
+  grid-template-areas: "name"
+                       "link"
+                       "github"
+                       "stack"
+                       "description"
+                       "preview";
+  min-height: 90%;
+  min-width: 100%;
+  align-items: center;
+  animation-name: glitchproject3;
+  animation-duration: 0.5s;
+  animation-delay: 5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  grid-row: 1;
+  grid-column: 1;
+  border: solid 2px #1afe39;
+  box-shadow: 0 0 1rem #1afe39;
+  background-color: rgb(42, 4, 78);
 }
 
-@keyframes glitchproject2 {
-    0%{
-        transform: translate(-2px,3px);
-        opacity: 0.75;
-        border: solid 2px #1afe39;
-        box-shadow: 0 0 1rem #1afe39;
-        background-color: rgb(42, 4, 78);
+@keyframes glitchproject1{
+    0% {
+      transform: none;
+      opacity: 1;
     }
-    25%{
-        transform: translate(2px,0px);
-        opacity: 1;
+    7% {
+      transform: skew(-0.5deg, -0.9deg);
+      opacity: 0.75;
     }
-    50%{
-        transform: translate(-3px,3px);
-        opacity: 0.75;
+    10% {
+      transform: none;
+      opacity: 1;
     }
-    75%{
-        transform: translate(-4px, 0px);
-        opacity: 1;
-        border: solid 2px #1afe39;
-        box-shadow: 0 0 1rem #1afe39;
-        background-color: rgb(42, 4, 78);
+    27% {
+      transform: none;
+      opacity: 1;
     }
-    100%{
-        transform: translate(-4px, 2px);
-        opacity: 0.75;
+    30% {
+      transform: skew(0.8deg, -0.1deg);
+      opacity: 0.75;
     }
-}
+    35% {
+      transform: none;
+      opacity: 1;
+    }
+    52% {
+      transform: none;
+      opacity: 1;
+    }
+    55% {
+      transform: skew(-1deg, 0.2deg);
+      opacity: 0.75;
+    }
+    50% {
+      transform: none;
+      opacity: 1;
+    }
+    72% {
+      transform: none;
+      opacity: 1;
+    }
+    75% {
+      transform: skew(0.4deg, 1deg);
+      opacity: 0.75;
+    }
+    80% {
+      transform: none;
+      opacity: 1;
+    }
+    100% {
+      transform: none;
+      opacity: 1;
+    }
+  }
+  
+  @keyframes glitch2project2{
+    0% {
+      transform: none;
+      opacity: 0.25;
+    }
+    7% {
+      transform: translate(-2px, -3px);
+      opacity: 0.5;
+    }
+    10% {
+      transform: none;
+      opacity: 0.25;
+    }
+    27% {
+      transform: none;
+      opacity: 0.25;
+    }
+    30% {
+      transform: translate(-5px, -2px);
+      opacity: 0.5;
+    }
+    35% {
+      transform: none;
+      opacity: 0.25;
+    }
+    52% {
+      transform: none;
+      opacity: 0.25;
+    }
+    55% {
+      transform: translate(-5px, -1px);
+      opacity: 0.5;
+    }
+    50% {
+      transform: none;
+      opacity: 0.25;
+    }
+    72% {
+      transform: none;
+      opacity: 0.25;
+    }
+    75% {
+      transform: translate(-2px, -6px);
+      opacity: 0.5;
+    }
+    80% {
+      transform: none;
+      opacity: 0.25;
+    }
+    100% {
+      transform: none;
+      opacity: 0.25;
+    }
+  }
+
+  @keyframes glitchproject3 {
+    0% {
+      transform: none;
+      opacity: 0.25;
+    }
+    7% {
+      transform: translate(2px, 3px);
+      opacity: 0.5;
+    }
+    10% {
+      transform: none;
+      opacity: 0.25;
+    }
+    27% {
+      transform: none;
+      opacity: 0.25;
+    }
+    30% {
+      transform: translate(5px, 2px);
+      opacity: 0.5;
+    }
+    35% {
+      transform: none;
+      opacity: 0.25;
+    }
+    52% {
+      transform: none;
+      opacity: 0.25;
+    }
+    55% {
+      transform: translate(5px, 1px);
+      opacity: 0.5;
+    }
+    50% {
+      transform: none;
+      opacity: 0.25;
+    }
+    72% {
+      transform: none;
+      opacity: 0.25;
+    }
+    75% {
+      transform: translate(2px, 6px);
+      opacity: 0.5;
+    }
+    80% {
+      transform: none;
+      opacity: 0.25;
+    }
+    100% {
+      transform: none;
+      opacity: 0.25;
+    }
+  }
